<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">Ask</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

	<string name="latest_topics">最新问题</string>
    <string name="top_topics">热门问题</string>
    <string name="common_topics">常见问题</string>
    
    <string name="my_topics">我的问题</string>
    <string name="my_replys">我的回答</string>
    <string name="my_gold">我的金币</string>
    
    <string name="integration">积分： </string>
    <string name="grade">等级： </string>
    <string name="ranking">排行: </string>
</resources>