<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingBottom="30dp"
        android:paddingTop="30dp" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@null" />

        <TextView
            android:id="@+id/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/avatar"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/avatar"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:text="Dreaner"
            android:textColor="@color/blue1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/integration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nick_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/avatar"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:text="@string/integration"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/integration"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/avatar"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:text="@string/grade"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grade"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/avatar"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:text="@string/ranking"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/topic_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/topic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/ic_topic_s"
            android:drawablePadding="12dp"
            android:gravity="center_vertical|left"
            android:text="@string/my_topics"
            android:textColor="@color/blue1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/topic_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:text="20"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reply_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/reply_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/ic_reply_s"
            android:drawablePadding="12dp"
            android:gravity="center_vertical|left"
            android:text="@string/my_replys"
            android:textColor="@color/blue1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reply_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:text="18"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gold_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gold_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/ic_gold"
            android:drawablePadding="12dp"
            android:gravity="center_vertical|left"
            android:text="@string/my_gold"
            android:textColor="@color/blue1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gold_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>